--- a/frontend/.env.prod
+++ b/frontend/.env.prod
@@ -1,5 +1,5 @@
 # Production Environment Variables
 # Frontend
 
-VITE_API_URL=http://localhost/api
+VITE_API_URL=http://localhost:3001/api
 VITE_NODE_ENV=production
