--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,12 +29,8 @@ services:
     ports:
       - "3001:3001"
     environment:
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_NAME=finance_tracker
-      - DB_USERNAME=postgres
-      - DB_PASSWORD=Salc@2017new
-      - PORT=3001
+      - NODE_ENV=production
+      - DATABASE_URL=postgresql://postgres:[SUA-SENHA]@db.gnxjjmpeacexsmjlncaf.supabase.co:5432/postgres
       - JWT_SECRET=9fK3vL2xQ8mTzP7aR1wYc6BqH4nD5uE8sJ0kLmN3pX7rT2vW6yZc1QaH9bUfG4
       - JWT_EXPIRATION=7d
       - FRONTEND_URL=http://localhost
